<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/pink"
    tools:context=".front">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/image_menu"
            android:layout_width="180dp"
            android:layout_height="250dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10sp"
            android:src="@drawable/mother4"
            />

        <TextView
            android:layout_width="180sp"
            android:layout_height="150sp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/text_name"
            android:textColor="@color/colorAccent"
            android:textSize="30sp">

        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/button_1"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/button1"
        android:textStyle="bold"
        android:textSize="22sp"
        >
    </Button>

    <Button
        android:id="@+id/button_2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_2"
        android:text="@string/button2"
        android:textStyle="bold"
        android:textSize="22sp"
        >
    </Button>

    <Button
        android:id="@+id/button_3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/button3"
        android:textStyle="bold"
        android:textSize="22sp"
        >
    </Button>

    <Button
        android:id="@+id/button_4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_2"
        android:text="@string/button4"
        android:textStyle="bold"
        android:textSize="22sp"
        >
    </Button>
    <Button
        android:id="@+id/button_5"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/button5"
        android:textStyle="bold"
        android:textSize="22sp"
        >
    </Button>
    <Button
        android:id="@+id/button_6"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_2"
        android:text="@string/button6"
        android:textStyle="bold"
        android:textSize="22sp"
        >
    </Button>




</LinearLayout>